<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_ebay"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_taked"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true"/>

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawableStart="@drawable/ic_search"
                android:hint="@string/search_for_anything"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:background="@drawable/shape_border_rounded"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:textColorHint="#90FFFFFF"/>

        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nested_scroll_view"
            android:background="@color/black">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:orientation="horizontal"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/shape_border_rounded"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:src="@mipmap/ic_saved"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/saved"
                            android:textColor="#FFFFFF"
                            android:textSize="15sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/shape_border_rounded"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:src="@mipmap/ic_category"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/categories"
                            android:textColor="#FFFFFF"
                            android:textSize="15sp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/shape_border_rounded"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:src="@mipmap/ic_deals"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/deals"
                            android:textColor="#FFFFFF"
                            android:textSize="15sp"/>

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="15dp"
                    android:background="#FFFAFA"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/up_to_70_off_bedding_and_bath"
                        android:textColor="#000000"
                        android:textSize="17sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="60dp"
                        android:text="@string/stock_yourlinen_closet_with_towels_sheetsm_and_more"
                        android:textColor="@color/black"
                        android:textStyle="normal"
                        android:textSize="15sp"/>

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/shape_border_rounded_black"
                        android:gravity="center"
                        android:text="@string/freshen_up"
                        android:textColor="#ffffff"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="15dp"
                    android:background="#DC143C"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/the_right_parts_at_the_right_prices"
                        android:textColor="#FFFFFF"
                        android:textSize="17sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="60dp"
                        android:text="@string/everything_you_need_for_your_vehicle"
                        android:textColor="@color/white"
                        android:textStyle="normal"
                        android:textSize="15sp"/>

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/shape_border_rounded_white"
                        android:gravity="center"
                        android:text="@string/lets_ride"
                        android:textColor="@color/black"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:background="#F0FFFF"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="15sp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/up_to_60_off_your_favorites"
                            android:textColor="#00008B"
                            android:textSize="17sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="60dp"
                            android:text="@string/refurbished_phones_from_trusted_sellers_with_a_warranty"
                            android:textColor="#00008B"
                            android:textStyle="normal"
                            android:textSize="15sp"/>

                        <TextView
                            android:layout_width="120dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="60dp"
                            android:background="@drawable/shape_border_rounded_grey"
                            android:gravity="center"
                            android:text="@string/get_them_now"
                            android:textColor="#ffffff"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="15dp">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_main"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                    </LinearLayout>

                </LinearLayout>

                </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>